tests/semantic_errors/testcase11.c
// declaration after definition main function

int main(void){
    return 3;
}

int main(void);